# mpo-frontend

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  playwright.config.js  tsconfig.json  webpack.config.js
.github/actions/playwright-test/: action.yml
.github/workflows/: docker-e2e-tests.yml  docker-publish.yaml  e2e-tests.yml  enable-auto-merge-pr.yml
public/: env-config.js  index.html  login.html  login_callback.html  manifest.json  offline.html  service-worker.js
public/css/: console.css  styles.css
public/js/: index.js
public/ts/: auth.ts  env-loader.ts  index.ts  login.ts  login_callback.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
tests/e2e/: auth.spec.ts
tests/e2e/mocks/: oauth-server.js  oauth-server.ts  start-mock-oauth.js
