[package]
name = "podcast-player"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for podcast player"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "AudioContext",
  "AudioNode",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "GainNode",
  "AudioParam",
  "console"
]}

[profile.release]
opt-level = "s"
lto = true